2011-04-29 14:07  uratec

	* ChangeLog, NEWS, README, configure.ac,
	  mecab-naist-jdic/naist-jdic.csv: Modify dictionary.  Update
	  documents.

2011-04-22 11:26  uratec

	* ChangeLog, njd_set_accent_phrase/njd_set_accent_phrase.c,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_euc_jp.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_shift_jis.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_utf_8.h: add new
	  rule for accent phrasing.

2011-04-19 08:42  uratec

	* ChangeLog, mecab-naist-jdic/naist-jdic.csv: Modify dictionary.

2011-04-12 10:32  uratec

	* ChangeLog, mecab-naist-jdic/naist-jdic.csv: Update dictionary.

2011-03-07 08:26  uratec

	* ChangeLog, jpcommon/jpcommon_label.c: Fix a serious bug in accent
	  estimation.

2011-03-07 08:25  uratec

	* mecab-naist-jdic/naist-jdic.csv: Update dictionary.

2011-03-03 10:18  uratec

	* COPYING, ChangeLog, README, configure.ac, bin/open_jtalk.c,
	  jpcommon/jpcommon.c, jpcommon/jpcommon.h,
	  jpcommon/jpcommon_label.c, jpcommon/jpcommon_node.c,
	  jpcommon/jpcommon_rule_euc_jp.h,
	  jpcommon/jpcommon_rule_shift_jis.h,
	  jpcommon/jpcommon_rule_utf_8.h, mecab/COPYING,
	  mecab/src/common.h, mecab/src/dictionary_compiler.cpp,
	  mecab/src/dictionary_rewriter.cpp, mecab/src/iconv_utils.cpp,
	  mecab/src/iconv_utils.h, mecab/src/libmecab.cpp,
	  mecab/src/mecab.h, mecab/src/mempool.h, mecab/src/mutex.h,
	  mecab/src/param.cpp, mecab/src/utils.cpp, mecab/src/viterbi.cpp,
	  mecab-naist-jdic/COPYING, mecab2njd/mecab2njd.c,
	  mecab2njd/mecab2njd.h, njd/njd.c, njd/njd.h, njd/njd_node.c,
	  njd/njd_rule_euc_jp.h, njd/njd_rule_shift_jis.h,
	  njd/njd_rule_utf_8.h, njd2jpcommon/njd2jpcommon.c,
	  njd2jpcommon/njd2jpcommon.h,
	  njd2jpcommon/njd2jpcommon_rule_euc_jp.h,
	  njd2jpcommon/njd2jpcommon_rule_shift_jis.h,
	  njd2jpcommon/njd2jpcommon_rule_utf_8.h,
	  njd_set_accent_phrase/njd_set_accent_phrase.c,
	  njd_set_accent_phrase/njd_set_accent_phrase.h,