@@ -1,7 +1,7 @@
 #
 #   Japanese charcter category map
 #
-#   $Id: char.def,v 1.2 2009-11-11 04:14:46 uratec Exp $;
+#   $Id: char.def,v 1.1 2009/12/16 16:01:01 uratec Exp $;
 #
 
 ###################################################################################
