@@ -1,17 +1,17 @@
 //  MeCab -- Yet Another Part-of-Speech and Morphological Analyzer
 //
-//  $Id: mecab.cpp,v 1.17 2011-02-07 08:51:14 uratec Exp $;
+//  $Id: mecab.cpp,v 1.2 2010/11/19 07:14:37 uratec Exp $;
 //
 //  Copyright(C) 2001-2006 Taku Kudo <taku@chasen.org>
 //  Copyright(C) 2004-2006 Nippon Telegraph and Telephone Corporation
 
 /* ----------------------------------------------------------------- */
-/*           The Japanese TTS System "Open JTalk"                    */
-/*           developed by HTS Working Group                          */
+/*           The HMM-Based Speech Synthesis System (HTS)             */
+/*           Open JTalk developed by HTS Working Group               */
 /*           http://open-jtalk.sourceforge.net/                      */
 /* ----------------------------------------------------------------- */
 /*                                                                   */
-/*  Copyright (c) 2008-2011  Nagoya Institute of Technology          */
+/*  Copyright (c) 2008-2010  Nagoya Institute of Technology          */
 /*                           Department of Computer Science          */
 /*                                                                   */
 /* All rights reserved.                                              */
